@@ -1,3 +1,5 @@
+sudo: required
+dist: trusty
 language: c
 os:
   - linux
@@ -7,8 +9,9 @@ compiler:
   - gcc
 before_install:
   - if test `uname -s` = 'Darwin'; then brew update && brew install gettext && brew link --force gettext; fi
-  - if test `uname -s` = 'Linux'; then sudo apt-get update && sudo apt-mark hold postgresql-9.2 postgresql-9.3 postgresql-9.4 postgresql-client postgresql-client-common postgresql-common postgresql-contrib-9.2 postgresql-contrib-9.3 postgresql-contrib-9.4 postgresql-doc && sudo apt-get --fix-missing -o Dpkg::Options::="--force-confold" -y upgrade && sudo apt-get install gettext; fi
+  - if test `uname -s` = 'Linux'; then sudo apt-get update && sudo apt-mark hold postgresql-9.2 postgresql-9.3 postgresql-9.4 postgresql-client postgresql-client-common postgresql-common postgresql-contrib-9.2 postgresql-contrib-9.3 postgresql-contrib-9.4 postgresql-doc && sudo apt-get --fix-missing -o Dpkg::Options::="--force-confold" upgrade -y && sudo apt-get install -y autopoint; fi
 install:
   - ./synclibs.sh && ./autogen.sh
 script:
+  - if test `uname -s` = 'Linux'; then export PATH=$(echo $PATH | tr ":" "\n" | sed '/\/opt\/python/d' | tr "\n" ":" | sed "s/::/:/g"); fi
   - ./runtests.sh
