@@ -5,13 +5,15 @@ authors: ["Joachim Metz <joachim.metz@gmail.com>"]
 year_of_creation: "2008"
 download_url: "https://github.com/libyal/libcsplit/releases"
 git_url: "https://github.com/libyal/libcsplit.git"
-build_dependencies: []
-features: [
-    "cygwin", "gcc", "mingw", "msvscpp",
-    "dpkg", "rpm"]
+features: []
 
 [library]
 description: "Library to support cross-platform C split string functions"
+build_dependencies: []
+
+[tests]
+features: ["profiles", "valgrind"]
+profiles: ["libcerror"]
 
 [troubleshooting]
 
