@@ -1,7 +1,7 @@
 #!/bin/sh
 # Script that synchronizes the local library dependencies
 #
-# Version: 20160212
+# Version: 20160320
 
 GIT_URL_PREFIX="https://github.com/libyal";
 LOCAL_LIBS="libcerror libcstring";
@@ -13,18 +13,27 @@ for LOCAL_LIB in ${LOCAL_LIBS};
 do
 	git clone ${GIT_URL_PREFIX}/${LOCAL_LIB}.git ${LOCAL_LIB}-$$;
 
-	if test -d ${LOCAL_LIB}-$$;
+	if ! test -d ${LOCAL_LIB}-$$;
 	then
-		LOCAL_LIB_UPPER=`echo "${LOCAL_LIB}" | tr "[a-z]" "[A-Z]"`;
-		LOCAL_LIB_VERSION=`grep -A 2 AC_INIT ${LOCAL_LIB}-$$/configure.ac | tail -n 1 | sed 's/^\s*\[\([0-9]*\)\],\s*$/\1/'`;
+		continue
+	fi
 
-		rm -rf ${LOCAL_LIB};
-		mkdir ${LOCAL_LIB};
+	rm -rf ${LOCAL_LIB};
+	mkdir ${LOCAL_LIB};
 
-		if test -d ${LOCAL_LIB};
-		then
-			cp ${LOCAL_LIB}-$$/${LOCAL_LIB}/*.[ch] ${LOCAL_LIB};
-			cp ${LOCAL_LIB}-$$/${LOCAL_LIB}/Makefile.am ${LOCAL_LIB}/Makefile.am;
+	if ! test -d ${LOCAL_LIB};
+	then
+		continue
+	fi
+
+	LOCAL_LIB_UPPER=`echo "${LOCAL_LIB}" | tr "[a-z]" "[A-Z]"`;
+	LOCAL_LIB_VERSION=`grep -A 2 AC_INIT ${LOCAL_LIB}-$$/configure.ac | tail -n 1 | sed 's/^\s*\[\([0-9]*\)\],\s*$/\1/'`;
+	LOCAL_LIB_MAKEFILE_AM="${LOCAL_LIB}/Makefile.am";
+
+	cp ${LOCAL_LIB}-$$/${LOCAL_LIB}/*.[chly] ${LOCAL_LIB};
+	cp ${LOCAL_LIB}-$$/${LOCAL_LIB_MAKEFILE_AM} ${LOCAL_LIB_MAKEFILE_AM};
+
+	# Make the necessary changes to libyal/Makefile.am
 
 SED_SCRIPT="/AM_CPPFLAGS = / {
 	i\\
@@ -65,13 +74,20 @@ endif
 	N
 	d
 }";
-			echo "${SED_SCRIPT}" >> ${LOCAL_LIB}-$$.sed;
-			sed -i'~' -f ${LOCAL_LIB}-$$.sed ${LOCAL_LIB}/Makefile.am;
-			rm -f ${LOCAL_LIB}-$$.sed;
+	echo "${SED_SCRIPT}" >> ${LOCAL_LIB}-$$.sed;
+	sed -i'~' -f ${LOCAL_LIB}-$$.sed ${LOCAL_LIB_MAKEFILE_AM};
+	rm -f ${LOCAL_LIB}-$$.sed;
 
-			sed -i'~' "/${LOCAL_LIB}_definitions.h.in/d" ${LOCAL_LIB}/Makefile.am;
-			sed -i'~' "/${LOCAL_LIB}.rc/d" ${LOCAL_LIB}/Makefile.am;
-			sed -i'~' '/EXTRA_DIST = /d' ${LOCAL_LIB}/Makefile.am;
+	sed -i'~' "/${LOCAL_LIB}_definitions.h.in/d" ${LOCAL_LIB_MAKEFILE_AM};
+	sed -i'~' "/${LOCAL_LIB}.rc/d" ${LOCAL_LIB_MAKEFILE_AM};
+
+	if test ${LOCAL_LIB} = "libodraw";
+	then
+		# TODO: make this more generic to strip the last \\
+		sed -i'~' 's/libodraw_cue_scanner.c \\/libodraw_cue_scanner.c/' ${LOCAL_LIB_MAKEFILE_AM};
+	else
+		sed -i'~' '/EXTRA_DIST = /,/^$/d' ${LOCAL_LIB_MAKEFILE_AM};
+	fi
 
 SED_SCRIPT="/^$/ {
 	x
@@ -82,17 +98,39 @@ SED_SCRIPT="/^$/ {
 		D
 	}
 }";
-			echo "${SED_SCRIPT}" >> ${LOCAL_LIB}-$$.sed;
-			sed -i'~' -f ${LOCAL_LIB}-$$.sed ${LOCAL_LIB}/Makefile.am;
-			rm -f ${LOCAL_LIB}-$$.sed;
+	echo "${SED_SCRIPT}" >> ${LOCAL_LIB}-$$.sed;
+	sed -i'~' -f ${LOCAL_LIB}-$$.sed ${LOCAL_LIB_MAKEFILE_AM};
+	rm -f ${LOCAL_LIB}-$$.sed;
 
-			rm -f ${LOCAL_LIB}/${LOCAL_LIB}.c;
-
-			cp ${LOCAL_LIB}-$$/${LOCAL_LIB}/${LOCAL_LIB}_definitions.h.in ${LOCAL_LIB}/${LOCAL_LIB}_definitions.h;
-			sed -i'~' "s/@VERSION@/${LOCAL_LIB_VERSION}/" ${LOCAL_LIB}/${LOCAL_LIB}_definitions.h;
+	# Make the necessary changes to libfvalue/Makefile.am
+	if test ${LOCAL_LIB} = "libfvalue";
+	then
+		if ! test -f "m4/libfdatetime.m4";
+		then
+			sed -i'~' '/@LIBFDATETIME_CPPFLAGS@/d' ${LOCAL_LIB_MAKEFILE_AM};
 		fi
-		rm -rf ${LOCAL_LIB}-$$;
+		if ! test -f "m4/libfguid.m4";
+		then
+			sed -i'~' '/@LIBFGUID_CPPFLAGS@/d' ${LOCAL_LIB_MAKEFILE_AM};
+		fi
+		if ! test -f "m4/libfwnt.m4";
+		then
+			sed -i'~' '/@LIBFWNT_CPPFLAGS@/d' ${LOCAL_LIB_MAKEFILE_AM};
+		fi
+		if ! test -f "m4/libuna.m4";
+		then
+			sed -i'~' '/@LIBUNA_CPPFLAGS@/d' ${LOCAL_LIB_MAKEFILE_AM};
+		fi
 	fi
+
+	# Remove libyal/libyal.c
+	rm -f ${LOCAL_LIB}/${LOCAL_LIB}.c;
+
+	# Make the necessary changes to libyal/libyal_defitions.h
+	cp ${LOCAL_LIB}-$$/${LOCAL_LIB}/${LOCAL_LIB}_definitions.h.in ${LOCAL_LIB}/${LOCAL_LIB}_definitions.h;
+	sed -i'~' "s/@VERSION@/${LOCAL_LIB_VERSION}/" ${LOCAL_LIB}/${LOCAL_LIB}_definitions.h;
+
+	rm -rf ${LOCAL_LIB}-$$;
 done
 
 IFS=$OLDIFS;
